--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Application example with recommended architecture for Escobar micro framework",
   "main": "index.js",
   "dependencies": {
-    "escobar": "^1.4.0"
+    "escobar": "^1.4.0",
+    "uws": "^9.14.0"
   },
   "devDependencies": {},
   "scripts": {
