--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Application example with recommended architecture for Escobar micro framework",
   "main": "index.js",
   "dependencies": {
-    "escobar": "^1.4.0",
-    "uws": "^9.14.0"
+    "escobar": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
